--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">LoginApp</string>
+    <string name="default_web_client_id">254906498303-h5t9ec7kii7oi7p0b0jharc7dqt1suf8.apps.googleusercontent.com</string>
 </resources>
