--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="nomeText"> <u>Nome</u> </string>
     <string name="cognomeText"> <u>Cognome</u> </string>
     <string name="usernameText"> <u>Username</u> </string>
+    <string name="emailText"> <u>Email</u> </string>
+
 </resources>
