Fix bug testo che andava a capo nella schermata di profilo, aggiunta scritte di Nome, Cognome e Username nel ChangeData activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="cognomeText"> <u>Cognome</u> </string>
     <string name="usernameText"> <u>Username</u> </string>
     <string name="emailText"> <u>Email</u> </string>
+    <string name="caricamento">Caricamento...</string>
 
 </resources>
