Aggiunta della scelta di facoltà in tutti i Fragment e Activity in cui è richiesta

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="cognomeText"> <u>Cognome</u> </string>
     <string name="usernameText"> <u>Username</u> </string>
     <string name="emailText"> <u>Email</u> </string>
+    <string name="facoltaText"> <u>Facoltà</u> </string>
     <string name="caricamento">Caricamento...</string>
     <string name="forgotPassword"><u>Hai dimenticato la password?</u></string>
 
